// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainFrame /> should adapt when the window is resized 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        Zonal Annual Mean Land-Ocean Temperature
      </p>
      <p
        class="data-vis-header-2"
      >
        1880 - 2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          width="1000"
        >
          <g
            transform="translate(40,20)"
          >
            <g
              class="data-vis-axis-x"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
              transform="translate(0,960)"
            >
              <path
                class="domain"
                d="M0.5,6V0.5H920.5V6"
                stroke="#000"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1880
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1890
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(134.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1900
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(201.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1910
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(269.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1920
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(336.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1930
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(403.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1940
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(470.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1950
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(537.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1960
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(604.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1970
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(672.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1980
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(739.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1990
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(806.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2000
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(920.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2017
                </text>
              </g>
            </g>
            <g
              class="data-vis-axis-y"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="end"
            >
              <path
                class="domain"
                d="M940,960.5H0.5V0.5H940"
                stroke="#000"
              />
              <g
                class="tick "
                opacity="1"
                transform="translate(0,960.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,840.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,720.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -0.5°
                </text>
              </g>
              <g
                class="tick data-vis-axis-y-zero"
                opacity="1"
                transform="translate(0,600.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,480.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,360.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,240.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,120.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,0.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.5°
                </text>
              </g>
            </g>
            <text
              class="data-vis-info"
              dy="-3"
            >
              Annual temperature change compared to the mean of the years from 1951 to 1980
            </text>
            <g
              class="data-vis-group-line"
            >
              <path
                class="data-vis-line"
                d="M0,701L67,734L920,329"
                style="stroke: #ff0000;"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="data-vis-tools"
      >
        <div
          style="color: rgb(255, 0, 0);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-Glob"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-Glob"
            >
              <span
                class="bx--toggle__appearance"
              />
              Global
            </label>
          </div>
        </div>
        <div
          style="color: rgb(3, 145, 249);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-NHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-NHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              North hemisphere
            </label>
          </div>
        </div>
        <div
          style="color: rgb(91, 146, 78);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(252, 145, 39);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              64N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(171, 95, 171);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44N-64N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44N-64N"
            >
              <span
                class="bx--toggle__appearance"
              />
              44N-64N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(59, 187, 206);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-44N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-44N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-44N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(7, 18, 190);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-EQU-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-EQU-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              EQU-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(204, 76, 118);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(90, 91, 18);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-EQU"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-EQU"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-EQU
            </label>
          </div>
        </div>
        <div
          style="color: rgb(65, 105, 32);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              44S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(242, 93, 34);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64S-44S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64S-44S"
            >
              <span
                class="bx--toggle__appearance"
              />
              64S-44S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(62, 88, 122);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-64S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-64S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-64S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(124, 33, 62);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(49, 0, 53);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-SHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-SHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              South hemisphere
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        GISTEMP Team, 2018: GISS Surface Temperature Analysis (GISTEMP). NASA Goddard Institute for Space Studies. Dataset accessed 2018-02-10 at https://data.giss.nasa.gov/gistemp/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Hansen, J., R. Ruedy, M. Sato, and K. Lo, 2010: Global surface temperature change, Rev. Geophys., 48, RG4004, doi:10.1029/2010RG000345
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should add a line when toggling a zone selector 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        Zonal Annual Mean Land-Ocean Temperature
      </p>
      <p
        class="data-vis-header-2"
      >
        1880 - 2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          width="1000"
        >
          <g
            transform="translate(40,20)"
          >
            <g
              class="data-vis-axis-x"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
              transform="translate(0,960)"
            >
              <path
                class="domain"
                d="M0.5,6V0.5H920.5V6"
                stroke="#000"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1880
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1890
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(134.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1900
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(201.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1910
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(269.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1920
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(336.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1930
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(403.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1940
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(470.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1950
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(537.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1960
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(604.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1970
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(672.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1980
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(739.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1990
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(806.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2000
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(920.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2017
                </text>
              </g>
            </g>
            <g
              class="data-vis-axis-y"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="end"
            >
              <path
                class="domain"
                d="M940,960.5H0.5V0.5H940"
                stroke="#000"
              />
              <g
                class="tick "
                opacity="1"
                transform="translate(0,960.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,840.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,720.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -0.5°
                </text>
              </g>
              <g
                class="tick data-vis-axis-y-zero"
                opacity="1"
                transform="translate(0,600.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,480.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,360.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,240.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,120.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,0.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.5°
                </text>
              </g>
            </g>
            <text
              class="data-vis-info"
              dy="-3"
            >
              Annual temperature change compared to the mean of the years from 1951 to 1980
            </text>
            <g
              class="data-vis-group-line"
            >
              <path
                class="data-vis-line"
                d="M0,701L67,734L920,329"
                style="stroke: #ff0000;"
              />
            </g>
            <g
              class="data-vis-group-line"
            >
              <path
                class="data-vis-line"
                d="M0,758L67,734L920,271"
                style="stroke: #0391f9;"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="data-vis-tools"
      >
        <div
          style="color: rgb(255, 0, 0);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-Glob"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-Glob"
            >
              <span
                class="bx--toggle__appearance"
              />
              Global
            </label>
          </div>
        </div>
        <div
          style="color: rgb(3, 145, 249);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-NHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-NHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              North hemisphere
            </label>
          </div>
        </div>
        <div
          style="color: rgb(91, 146, 78);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(252, 145, 39);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              64N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(171, 95, 171);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44N-64N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44N-64N"
            >
              <span
                class="bx--toggle__appearance"
              />
              44N-64N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(59, 187, 206);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-44N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-44N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-44N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(7, 18, 190);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-EQU-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-EQU-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              EQU-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(204, 76, 118);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(90, 91, 18);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-EQU"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-EQU"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-EQU
            </label>
          </div>
        </div>
        <div
          style="color: rgb(65, 105, 32);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              44S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(242, 93, 34);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64S-44S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64S-44S"
            >
              <span
                class="bx--toggle__appearance"
              />
              64S-44S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(62, 88, 122);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-64S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-64S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-64S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(124, 33, 62);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(49, 0, 53);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-SHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-SHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              South hemisphere
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        GISTEMP Team, 2018: GISS Surface Temperature Analysis (GISTEMP). NASA Goddard Institute for Space Studies. Dataset accessed 2018-02-10 at https://data.giss.nasa.gov/gistemp/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Hansen, J., R. Ruedy, M. Sato, and K. Lo, 2010: Global surface temperature change, Rev. Geophys., 48, RG4004, doi:10.1029/2010RG000345
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should add a line when toggling a zone selector 2`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        Zonal Annual Mean Land-Ocean Temperature
      </p>
      <p
        class="data-vis-header-2"
      >
        1880 - 2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          width="1000"
        >
          <g
            transform="translate(40,20)"
          >
            <g
              class="data-vis-axis-x"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
              transform="translate(0,960)"
            >
              <path
                class="domain"
                d="M0.5,6V0.5H920.5V6"
                stroke="#000"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1880
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1890
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(134.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1900
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(201.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1910
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(269.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1920
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(336.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1930
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(403.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1940
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(470.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1950
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(537.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1960
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(604.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1970
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(672.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1980
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(739.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1990
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(806.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2000
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(920.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2017
                </text>
              </g>
            </g>
            <g
              class="data-vis-axis-y"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="end"
            >
              <path
                class="domain"
                d="M940,960.5H0.5V0.5H940"
                stroke="#000"
              />
              <g
                class="tick "
                opacity="1"
                transform="translate(0,960.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,840.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,720.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -0.5°
                </text>
              </g>
              <g
                class="tick data-vis-axis-y-zero"
                opacity="1"
                transform="translate(0,600.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,480.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,360.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,240.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,120.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,0.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.5°
                </text>
              </g>
            </g>
            <text
              class="data-vis-info"
              dy="-3"
            >
              Annual temperature change compared to the mean of the years from 1951 to 1980
            </text>
            <g
              class="data-vis-group-line"
            >
              <path
                class="data-vis-line"
                d="M0,701L67,734L920,329"
                style="stroke: #ff0000;"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="data-vis-tools"
      >
        <div
          style="color: rgb(255, 0, 0);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-Glob"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-Glob"
            >
              <span
                class="bx--toggle__appearance"
              />
              Global
            </label>
          </div>
        </div>
        <div
          style="color: rgb(3, 145, 249);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-NHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-NHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              North hemisphere
            </label>
          </div>
        </div>
        <div
          style="color: rgb(91, 146, 78);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(252, 145, 39);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              64N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(171, 95, 171);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44N-64N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44N-64N"
            >
              <span
                class="bx--toggle__appearance"
              />
              44N-64N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(59, 187, 206);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-44N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-44N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-44N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(7, 18, 190);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-EQU-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-EQU-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              EQU-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(204, 76, 118);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(90, 91, 18);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-EQU"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-EQU"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-EQU
            </label>
          </div>
        </div>
        <div
          style="color: rgb(65, 105, 32);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              44S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(242, 93, 34);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64S-44S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64S-44S"
            >
              <span
                class="bx--toggle__appearance"
              />
              64S-44S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(62, 88, 122);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-64S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-64S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-64S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(124, 33, 62);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(49, 0, 53);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-SHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-SHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              South hemisphere
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        GISTEMP Team, 2018: GISS Surface Temperature Analysis (GISTEMP). NASA Goddard Institute for Space Studies. Dataset accessed 2018-02-10 at https://data.giss.nasa.gov/gistemp/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Hansen, J., R. Ruedy, M. Sato, and K. Lo, 2010: Global surface temperature change, Rev. Geophys., 48, RG4004, doi:10.1029/2010RG000345
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 1`] = `
<div
  className="data-vis-container"
>
  <div
    className="data-vis-header"
  >
    <p
      className="data-vis-header-1"
    >
      Zonal Annual Mean Land-Ocean Temperature
    </p>
    <p
      className="data-vis-header-2"
    >
      1880 - 2017
    </p>
  </div>
  <div
    className="data-vis-body"
  >
    <div
      className="data-vis-chart"
      tabIndex={-1}
    />
    <div
      className="data-vis-tools"
    >
      <div
        key="Glob"
        style={
          Object {
            "color": "#ff0000",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={true}
            className="bx--toggle bx--toggle--small"
            id="toggle-Glob"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-Glob"
          >
            <span
              className="bx--toggle__appearance"
            />
            Global
          </label>
        </div>
      </div>
      <div
        key="NHem"
        style={
          Object {
            "color": "#0391f9",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-NHem"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-NHem"
          >
            <span
              className="bx--toggle__appearance"
            />
            North hemisphere
          </label>
        </div>
      </div>
      <div
        key="24N-90N"
        style={
          Object {
            "color": "#5b924e",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-24N-90N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-24N-90N"
          >
            <span
              className="bx--toggle__appearance"
            />
            24N-90N
          </label>
        </div>
      </div>
      <div
        key="64N-90N"
        style={
          Object {
            "color": "#fc9127",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-64N-90N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-64N-90N"
          >
            <span
              className="bx--toggle__appearance"
            />
            64N-90N
          </label>
        </div>
      </div>
      <div
        key="44N-64N"
        style={
          Object {
            "color": "#ab5fab",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-44N-64N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-44N-64N"
          >
            <span
              className="bx--toggle__appearance"
            />
            44N-64N
          </label>
        </div>
      </div>
      <div
        key="24N-44N"
        style={
          Object {
            "color": "#3bbbce",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-24N-44N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-24N-44N"
          >
            <span
              className="bx--toggle__appearance"
            />
            24N-44N
          </label>
        </div>
      </div>
      <div
        key="EQU-24N"
        style={
          Object {
            "color": "#0712be",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-EQU-24N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-EQU-24N"
          >
            <span
              className="bx--toggle__appearance"
            />
            EQU-24N
          </label>
        </div>
      </div>
      <div
        key="24S-24N"
        style={
          Object {
            "color": "#cc4c76",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-24S-24N"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-24S-24N"
          >
            <span
              className="bx--toggle__appearance"
            />
            24S-24N
          </label>
        </div>
      </div>
      <div
        key="24S-EQU"
        style={
          Object {
            "color": "#5a5b12",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-24S-EQU"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-24S-EQU"
          >
            <span
              className="bx--toggle__appearance"
            />
            24S-EQU
          </label>
        </div>
      </div>
      <div
        key="44S-24S"
        style={
          Object {
            "color": "#416920",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-44S-24S"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-44S-24S"
          >
            <span
              className="bx--toggle__appearance"
            />
            44S-24S
          </label>
        </div>
      </div>
      <div
        key="64S-44S"
        style={
          Object {
            "color": "#f25d22",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-64S-44S"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-64S-44S"
          >
            <span
              className="bx--toggle__appearance"
            />
            64S-44S
          </label>
        </div>
      </div>
      <div
        key="90S-64S"
        style={
          Object {
            "color": "#3e587a",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-90S-64S"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-90S-64S"
          >
            <span
              className="bx--toggle__appearance"
            />
            90S-64S
          </label>
        </div>
      </div>
      <div
        key="90S-24S"
        style={
          Object {
            "color": "#7c213e",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-90S-24S"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-90S-24S"
          >
            <span
              className="bx--toggle__appearance"
            />
            90S-24S
          </label>
        </div>
      </div>
      <div
        key="SHem"
        style={
          Object {
            "color": "#310035",
          }
        }
      >
        <div
          className="bx--form-item"
        >
          <input
            aria-label="Label Name"
            checked={false}
            className="bx--toggle bx--toggle--small"
            id="toggle-SHem"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="bx--toggle__label"
            htmlFor="toggle-SHem"
          >
            <span
              className="bx--toggle__appearance"
            />
            South hemisphere
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="data-vis-footer"
  >
    <p
      className="data-vis-footer-1"
    >
      GISTEMP Team, 2018: GISS Surface Temperature Analysis (GISTEMP). NASA Goddard Institute for Space Studies. Dataset accessed 2018-02-10 at https://data.giss.nasa.gov/gistemp/
    </p>
    <p
      className="data-vis-footer-2"
    >
      Hansen, J., R. Ruedy, M. Sato, and K. Lo, 2010: Global surface temperature change, Rev. Geophys., 48, RG4004, doi:10.1029/2010RG000345
    </p>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 2`] = `""`;

exports[`<MainFrame /> should render the svg element 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        Zonal Annual Mean Land-Ocean Temperature
      </p>
      <p
        class="data-vis-header-2"
      >
        1880 - 2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          width="1000"
        >
          <g
            transform="translate(40,20)"
          >
            <g
              class="data-vis-axis-x"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
              transform="translate(0,960)"
            >
              <path
                class="domain"
                d="M0.5,6V0.5H920.5V6"
                stroke="#000"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1880
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1890
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(134.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1900
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(201.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1910
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(269.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1920
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(336.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1930
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(403.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1940
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(470.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1950
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(537.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1960
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(604.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1970
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(672.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1980
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(739.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  1990
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(806.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2000
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(920.5,0)"
              >
                <line
                  stroke="#000"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="#000"
                  y="9"
                >
                  2017
                </text>
              </g>
            </g>
            <g
              class="data-vis-axis-y"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="end"
            >
              <path
                class="domain"
                d="M940,960.5H0.5V0.5H940"
                stroke="#000"
              />
              <g
                class="tick "
                opacity="1"
                transform="translate(0,960.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,840.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,720.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  -0.5°
                </text>
              </g>
              <g
                class="tick data-vis-axis-y-zero"
                opacity="1"
                transform="translate(0,600.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,480.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  0.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,360.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,240.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  1.5°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,120.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.0°
                </text>
              </g>
              <g
                class="tick "
                opacity="1"
                transform="translate(0,0.5)"
              >
                <line
                  stroke="#000"
                  x1="-20"
                  x2="940"
                />
                <text
                  dx="-3"
                  dy="-3"
                  fill="#000"
                  x="-3"
                >
                  2.5°
                </text>
              </g>
            </g>
            <text
              class="data-vis-info"
              dy="-3"
            >
              Annual temperature change compared to the mean of the years from 1951 to 1980
            </text>
            <g
              class="data-vis-group-line"
            >
              <path
                class="data-vis-line"
                d="M0,701L67,734L920,329"
                style="stroke: #ff0000;"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="data-vis-tools"
      >
        <div
          style="color: rgb(255, 0, 0);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-Glob"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-Glob"
            >
              <span
                class="bx--toggle__appearance"
              />
              Global
            </label>
          </div>
        </div>
        <div
          style="color: rgb(3, 145, 249);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-NHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-NHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              North hemisphere
            </label>
          </div>
        </div>
        <div
          style="color: rgb(91, 146, 78);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(252, 145, 39);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64N-90N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64N-90N"
            >
              <span
                class="bx--toggle__appearance"
              />
              64N-90N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(171, 95, 171);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44N-64N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44N-64N"
            >
              <span
                class="bx--toggle__appearance"
              />
              44N-64N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(59, 187, 206);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24N-44N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24N-44N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24N-44N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(7, 18, 190);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-EQU-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-EQU-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              EQU-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(204, 76, 118);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-24N"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-24N"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-24N
            </label>
          </div>
        </div>
        <div
          style="color: rgb(90, 91, 18);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-24S-EQU"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-24S-EQU"
            >
              <span
                class="bx--toggle__appearance"
              />
              24S-EQU
            </label>
          </div>
        </div>
        <div
          style="color: rgb(65, 105, 32);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-44S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-44S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              44S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(242, 93, 34);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-64S-44S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-64S-44S"
            >
              <span
                class="bx--toggle__appearance"
              />
              64S-44S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(62, 88, 122);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-64S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-64S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-64S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(124, 33, 62);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-90S-24S"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-90S-24S"
            >
              <span
                class="bx--toggle__appearance"
              />
              90S-24S
            </label>
          </div>
        </div>
        <div
          style="color: rgb(49, 0, 53);"
        >
          <div
            class="bx--form-item"
          >
            <input
              aria-label="Label Name"
              class="bx--toggle bx--toggle--small"
              id="toggle-SHem"
              type="checkbox"
              value="on"
            />
            <label
              class="bx--toggle__label"
              for="toggle-SHem"
            >
              <span
                class="bx--toggle__appearance"
              />
              South hemisphere
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        GISTEMP Team, 2018: GISS Surface Temperature Analysis (GISTEMP). NASA Goddard Institute for Space Studies. Dataset accessed 2018-02-10 at https://data.giss.nasa.gov/gistemp/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Hansen, J., R. Ruedy, M. Sato, and K. Lo, 2010: Global surface temperature change, Rev. Geophys., 48, RG4004, doi:10.1029/2010RG000345
      </p>
    </div>
  </div>
</div>
`;
